// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store should display results when necessary data is provided 1`] = `
Object {
  "dateModified": "1/31 23:14:01",
  "displayResults": false,
  "milesDriven": 100,
  "milesDrivenTimeframe": "month",
  "necessaryDataIsProvidedToCalculateSavings": true,
  "newMpg": 20,
  "newPpg": 1.5,
  "savings": Object {
    "annual": "$90",
    "monthly": "$7.50",
    "threeYear": "$270",
  },
  "tradeMpg": 10,
  "tradePpg": 1.5,
}
`;

exports[`Store should handle a flurry of actions 1`] = `
Object {
  "dateModified": "1/31 23:14:01",
  "displayResults": false,
  "milesDriven": 100,
  "milesDrivenTimeframe": "year",
  "necessaryDataIsProvidedToCalculateSavings": false,
  "newMpg": 20,
  "newPpg": 1.5,
  "savings": Object {
    "annual": "$390",
    "monthly": "$32.50",
    "threeYear": "$1,170",
  },
  "tradeMpg": 10,
  "tradePpg": 0,
}
`;

exports[`Store should not display results when necessary data is not provided 1`] = `
Object {
  "dateModified": "1/31 23:14:01",
  "displayResults": false,
  "milesDriven": 100,
  "milesDrivenTimeframe": "month",
  "necessaryDataIsProvidedToCalculateSavings": false,
  "newMpg": 20,
  "newPpg": "",
  "savings": Object {
    "annual": 0,
    "monthly": 0,
    "threeYear": 0,
  },
  "tradeMpg": 10,
  "tradePpg": 1.5,
}
`;
